--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,42 +1,68 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+
+
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+    {# <style type="text/css"> #}
+
+    {# body { #}
+    {# background-color: #FFFFFF; #}
+    {# } #}
+
+    {# /*.container {*/ #}
+    {# /*    background-color: #f1f1f1;*/ #}
+    {# /*    border-radius: 10px;*/ #}
+    {# /*    margin: 0;*/ #}
+    {# /*    position: absolute;*/ #}
+    {# /*    height: 60%;*/ #}
+    {# /*    top: 50%;*/ #}
+    {# /*    left: 50%;*/ #}
+    {# /*    width: 40%;*/ #}
+    {# /*    transform: translate(-50%, -50%);*/ #}
+    {# /*}*/ #}
+
+    {# </style> #}
+
+    <div class="container p-5">
+        <div class="row">
+            <div class="col">
+                <form method="post">
+                    {% if error %}
+                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    {% endif %}
+
+
+                    <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
+
+                    <label for="inputUsername">Pseudo</label>
+                    <input type="text" value="{{ last_username }}" name="username" id="inputUsername"
+                           class="form-control"
+                           autocomplete="username" required autofocus>
+
+                    <label for="inputPassword">Mot de passe</label>
+                    <input type="password" name="password" id="inputPassword" class="form-control"
+                           autocomplete="current-password"
+                           required>
+
+                    <input type="hidden" name="_csrf_token"
+                           value="{{ csrf_token('authenticate') }}"
+                    >
+
+                    <button class="btn btn-lg btn-primary mt-4" type="submit">
+                        se connecter
+                    </button>
+
+                </form>
+
+                <p class="text-muted mt-2">
+                    Pas encore inscrit ? <a class="nav-link d-inline ml-2" href="{{ path('app_register') }}">
+                        <strong><span class="text-primary">S'inscrire</span></strong></a>
+                </p>
+
+            </div>
         </div>
-    {% endif %}
+    </div>
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
 {% endblock %}
