--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,9 +8,11 @@
     <div class="example-wrapper">
 
         {% if app.user %}
-            <div class="mb-3">
-                Bonjour {{ app.user.username }} ravi de te revoir, <a href="{{ path('app_logout') }}">Logout</a>
-            </div>
+            {% if is_granted('ROLE_USER') %}
+                <div class="mb-3">
+                    Bonjour {{ app.user.username }} ravi de te revoir, <a href="{{ path('app_logout') }}">Logout</a>
+                </div>
+            {% endif %}
         {% endif %}
 
     </div>
