- Login fonctionne de nouveau, mais plus de middleware

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,7 +29,7 @@
                     <input type="hidden" name="_csrf_token"
                            value="{{ csrf_token('authenticate') }}"
                     >
-
+                    <input type="hidden" name="_target_path" value="account"/>
                     <button class="btn btn-lg btn-primary mt-4" type="submit">
                         se connecter
                     </button>
